src/BadLang/Tests/BadC.Tests/tests/passing/operators/AssignmentLocal8.basm
.dependency TestFramework

.data data data_raw BASM_DATA
{
	.cstr FailMsg assembly "8-bit Local Assignment Failed"
}

.code code code_raw BadC
{
	void __main__() : export
	{
		i8 value = 10;

		TestFramework::Assert::Equals8(value, 10, &data::FailMsg);

		halt;
	}
}