src/BadLang/Tests/BadC.Tests/tests/failing/TypeMismatchException/InvalidTypeAssignment.basm

.code code code_raw BadC
{
	void __main__() : export
	{
		i16 valueA = 10;
		i8 valueB = valueA;
		halt;
	}
}